# labot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
labot/: __init__.py  cli.py  constants.py  paper.py  status.py
